--- a/homework/meindex.html
+++ b/homework/meindex.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
 	<title>First Webpage</title>
-	<link rel="stylesheet" href="style.css" type="text/css" media="screen">
+	<link rel="stylesheet" href="mestyle.css" type="text/css" media="screen">
 </head>
 <body>
 	<section id='content'>
