--- a/yum/index.html
+++ b/yum/index.html
@@ -9,6 +9,38 @@
   	<link rel="stylesheet" href="style.css" type="text/css" media="screen" />
   </head>
   <body>
-	<!-- This is where your page content goes-->
+	<aside>
+		<p>Listen to <em>Rhapsody in Blue</em> by George Gershwin</p>
+	</aside>
+	<header>
+		<h1>BROILED PARMESAN LEMON TILAPIA</h1>
+		<h5>Servings 4</h5>
+	</header>
+	<section>
+		<ul>
+			<li>4 (4 oz) tilapia fillets</li>
+			<li>2 tbsp Miami-style sazon seasoning</li>
+			<li>1/2 cup grated Parmesan cheese</li>
+			<li>1 1/2 tbsp fat-free mayonnaise</li>
+			<li>2 tbsp lemon juice</li>
+			<li>2 tsp lemon zest</li>
+			<li>1/8 tsp dried basil</li>
+			<li>1/8 tsp ground black pepper</li>
+			<li>1/8 tsp oinion powder</li>
+			<li>1/8 tsp celery salt</li>
+		</ul>
+	</section>
+	<section>
+		<h3>Preparation</h3>
+		<ol>
+			<li>Preheat the oven's broiler and set the oven rack about 6 inches from the heat source. Line a broiler pan with aluminum foil. Spray pan with cooking spray.</li>
+			<li>Sprinkle tilapia with sazon seasoning and arrange on the prepared broiler rack.</li>
+			<li>Mix the Parmesan chees, butter, fat-free mayonnaise, lemon juice, lemon zest, basil, black pepper, onion powder and celery salt together in a bowl and set aside.</li>
+		</ol>
+		<h3>Cooking</h3>
+		<ol>
+			<li>Cook the fillets under the preheated broiler until fish is barely opaque, or about 2 to 3 minutes per side. Spread the Parmesan cheese blend over the fish fillets, return to oven, and continue cooking until the topping is golden brown and the fish flakes easily, or about 3 to 5 more minutes<li>
+		</ol>
+	</section>
   </body>
 </html>
