--- a/yum/index.html
+++ b/yum/index.html
@@ -35,7 +35,7 @@
 		<ol>
 			<li>Preheat the oven's broiler and set the oven rack about 6 inches from the heat source. Line a broiler pan with aluminum foil. Spray pan with cooking spray.</li>
 			<li>Sprinkle tilapia with sazon seasoning and arrange on the prepared broiler rack.</li>
-			<li>Mix the Parmesan chees, butter, fat-free mayonnaise, lemon juice, lemon zest, basil, black pepper, onion powder and celery salt together in a bowl and set aside.</li>
+			<li>Mix the Parmesan cheese, butter, fat-free mayonnaise, lemon juice, lemon zest, basil, black pepper, onion powder and celery salt together in a bowl and set aside.</li>
 		</ol>
 		<h3>Cooking</h3>
 		<ol>
