--- a/cats-vs-dogs/index.html
+++ b/cats-vs-dogs/index.html
@@ -1,9 +1,18 @@
 <!DOCTYPE html>
 <html>
   <head>
-
+	  <title>Dogs vs Cats: The Final Showdown</title>
   </head>
   <body>
-
+	  <header>
+		  <img src="images/dogvscat-logo.gif">
+		  <nav><ul>
+			  <li>photos</li>
+			  <li>about</li>
+			  <li>submit</li>
+			  <li>blog</li>
+			  <li>contact</li>
+		  </ul></nav>
+	  </header>
   </body>
 </html>
