uploaded cat images

--- a/cats-vs-dogs/index.html
+++ b/cats-vs-dogs/index.html
@@ -14,5 +14,8 @@
 			  <li>contact</li>
 		  </ul></nav>
 	  </header>
+	  <section>
+		  <img src="images/tswiftdog.jpg">
+		  
   </body>
 </html>
