--- a/homework/index.html
+++ b/homework/index.html
@@ -13,7 +13,7 @@
 		<h2>Yum</h2>
 				<p><a href="http://bwhips14.github.io/yum/index.html">Broiled Parmesan Lemon Tilapia</a></p>
 		<h2>Cats vs Dogs</h2>
-				<p>Add your link(s) Here</p>
+				<p><a href="http://bwhips14.github.io/cats-vs-dogs/index.html">The Final Showdown</a></p>
 		<h2>Wireframes</h2>
 				<p>Add your link(s) Here</p>
 		<h2>Llama Love</h2>
