--- a/cats-vs-dogs/index.html
+++ b/cats-vs-dogs/index.html
@@ -5,7 +5,7 @@
   </head>
   <body>
 	  <header>
-		  <img src="images/dogvscat-logo.gif" alt="images/dogvscat-logo.gif">
+		  <h1><img src="images/dogvscat-logo.gif" alt="images/dogvscat-logo.gif"></h1>
 		  <nav><ul>
 			  <li>photos</li>
 			  <li>about</li>
