--- a/yum/index.html
+++ b/yum/index.html
@@ -9,9 +9,9 @@
   	<link rel="stylesheet" href="style.css" type="text/css" media="screen" />
   </head>
   <body>
-	<aside>
+	<div>
 		<p>Listen to <em>Rhapsody in Blue</em> by George Gershwin</p>
-	</aside>
+	</div>
 	<header>
 		<h1>BROILED PARMESAN LEMON TILAPIA</h1>
 		<h5>Servings 4</h5>
