--- a/yum/index.html
+++ b/yum/index.html
@@ -42,5 +42,6 @@
 			<li>Cook the fillets under the preheated broiler until fish is barely opaque, or about 2 to 3 minutes per side. Spread the Parmesan cheese blend over the fish fillets, return to oven, and continue cooking until the topping is golden brown and the fish flakes easily, or about 3 to 5 more minutes<li>
 		</ol>
 	</section>
+	<img src="recipecard.jpg" alt="recipecard.jpg">
   </body>
 </html>
