--- a/homework/index.html
+++ b/homework/index.html
@@ -9,7 +9,7 @@
 	<section id='content'>
 		<h1>Brendan's Homework</h1>
 		<h2>Meee!</h2>
-				<p><a href="meindex.html">My Bio</a></p>
+				<p><a href="http://bwhips14.github.io/meeee/meindex.html">My Bio</a></p>
 		<h2>Yum</h2>
 				<p><a href="http://bwhips14.github.io/yum/index.html">Broiled Parmesan Lemon Tilapia</a></p>
 		<h2>Cats vs Dogs</h2>
