edited images and alts

--- a/yum/recipe.html
+++ b/yum/recipe.html
@@ -4,6 +4,6 @@
   	<title>Recipe Card</title>
   </head>
   <body>
-  	<img src="recipecard.jpg" alt="recipecard.jpg">
+  	<img src="recipecard.gif" alt="recipe card">
   </body>
 </html>
