--- a/meeee/meindex.html
+++ b/meeee/meindex.html
@@ -10,7 +10,7 @@
 			<h1>Brendan Whipple</h1>
 			<h2>Senior, Graphic Design</h2>
 			<p>My goals for this semester are to become reasonably comfortable with HTML/CSS/JS and to not only learn information but also gain a usesful skill.</p>
-			<img src="simpsons.jpg">
+			<img src="simpsons.jpg" alt="me as a simpsons char">
 	</section>
 	
 </body>
