css of recipe card

--- a/yum/index.html
+++ b/yum/index.html
@@ -6,16 +6,18 @@
   	<!--[if lt IE 9]>
   	<script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
   	<![endif]-->
+		<link rel="stylesheet" href="style.css" type="text/css" media="screen">
   </head>
   <body>
-	<div>
+	<div class="song">
 		<p>Listen to <em>Rhapsody in Blue</em> by George Gershwin</p>
 	</div>
 	<header>
-		<h1>BROILED PARMESAN LEMON TILAPIA</h1>
+		<h1>BROILED PARMESAN</h1>
+		<h2>LEMON TILAPIA</h2>
 		<h5>Servings 4</h5>
 	</header>
-	<section>
+	<section class="ingredients">
 		<ul>
 			<li>4 (4 oz) tilapia fillets</li>
 			<li>2 tbsp Miami-style sazon seasoning</li>
@@ -29,14 +31,14 @@
 			<li>1/8 tsp celery salt</li>
 		</ul>
 	</section>
-	<section>
-		<h3>Preparation</h3>
+	<section class="instructions">
+		<h3 class="section">Preparation</h3>
 		<ol>
 			<li>Preheat the oven's broiler and set the oven rack about 6 inches from the heat source. Line a broiler pan with aluminum foil. Spray pan with cooking spray.</li>
 			<li>Sprinkle tilapia with sazon seasoning and arrange on the prepared broiler rack.</li>
 			<li>Mix the Parmesan cheese, butter, fat-free mayonnaise, lemon juice, lemon zest, basil, black pepper, onion powder and celery salt together in a bowl and set aside.</li>
 		</ol>
-		<h3>Cooking</h3>
+		<h3 class="section">Cooking</h3>
 		<ol>
 			<li>Cook the fillets under the preheated broiler until fish is barely opaque, or about 2 to 3 minutes per side. Spread the Parmesan cheese blend over the fish fillets, return to oven, and continue cooking until the topping is golden brown and the fish flakes easily, or about 3 to 5 more minutes<li>
 		</ol>
