updated recipe card

--- a/yum/index.html
+++ b/yum/index.html
@@ -10,7 +10,7 @@
   </head>
   <body>
 	<div class="song">
-		<p>Listen to <em>Rhapsody in Blue</em> by George Gershwin</p>
+		<p>Listen to Rhapsody in Blue <br>by George Gershwin</p>
 	</div>
 	<header>
 		<h1>BROILED PARMESAN</h1>
@@ -31,16 +31,16 @@
 			<li>1/8 tsp celery salt</li>
 		</ul>
 	</section>
-	<section class="instructions">
+	<section>
 		<h3 class="section">Preparation</h3>
-		<ol>
-			<li>Preheat the oven's broiler and set the oven rack about 6 inches from the heat source. Line a broiler pan with aluminum foil. Spray pan with cooking spray.</li>
-			<li>Sprinkle tilapia with sazon seasoning and arrange on the prepared broiler rack.</li>
-			<li>Mix the Parmesan cheese, butter, fat-free mayonnaise, lemon juice, lemon zest, basil, black pepper, onion powder and celery salt together in a bowl and set aside.</li>
+		<ol class="instructions">
+			<li class="sentence">Preheat the oven's broiler and set the oven rack about 6 inches from the heat source. Line a broiler pan with aluminum foil. Spray pan with cooking spray.</li>
+			<li class="sentence">Sprinkle tilapia with sazon seasoning and arrange on the prepared broiler rack.</li>
+			<li class="sentence">Mix the Parmesan cheese, butter, fat-free mayonnaise, lemon juice, lemon zest, basil, black pepper, onion powder and celery salt together in a bowl and set aside.</li>
 		</ol>
 		<h3 class="section">Cooking</h3>
-		<ol>
-			<li>Cook the fillets under the preheated broiler until fish is barely opaque, or about 2 to 3 minutes per side. Spread the Parmesan cheese blend over the fish fillets, return to oven, and continue cooking until the topping is golden brown and the fish flakes easily, or about 3 to 5 more minutes<li>
+		<ol class="instructions">
+			<li class="sentence">Cook the fillets under the preheated broiler until fish is barely opaque, or about 2 to 3 minutes per side. Spread the Parmesan cheese blend over the fish fillets, return to oven, and continue cooking until the topping is golden brown and the fish flakes easily, or about 3 to 5 more minutes<li>
 		</ol>
 	</section>
 	<a href="recipe.html">Recipe Card</a>
