--- a/cats-vs-dogs/index.html
+++ b/cats-vs-dogs/index.html
@@ -2,11 +2,12 @@
 <html>
   <head>
 	  <title>Dogs vs Cats: The Final Showdown</title>
+	  <link rel="stylesheet" href="reset.css" type="text/css" media="screen">
   </head>
   <body>
 	  <header>
 		  <h1><img src="images/dogvscat-logo.gif" alt="dogsvcats logo"></h1>
-		  <nav><ul>
+		  <nav class="links"><ul>
 			  <li>photos</li>
 			  <li>about</li>
 			  <li>submit</li>
@@ -15,19 +16,19 @@
 		  </ul></nav>
 	  </header>
 	  <article>
-		  <img src="images/tswiftdog.jpg" alt="dog looks like taylor swift">
+		  <h4 class="clear"><img src="images/tswiftdog.jpg" alt="dog looks like taylor swift"></h4>
 		  <h2>Dogs Have Better Noses</h2>
 		  <p>Dogs can discriminate odors at concentrations nearly 100 million times lower than humans can. The wet nose is essential for determining the direction of the air current containing the smell. Cold receptors in the skin are sensitive to the cooling of the skin by evaporation of the moisture by air currents.</p>
 	  </article>
 	  <article>
-		  <img src="images/obamacat.jpg" alt="cat looks like obama">
+		  <h4 class="obama"><img src="images/obamacat.jpg" alt="cat looks like obama"></h4>
 		  <h2>Cats Have Better Tongues</h2>
 		  <p>Cats are known for their cleanliness, spending many hours licking their coats. The cat's tongue has backwards-facing spines about 500 micrometers long, which are called papillae. These are quite rigid, as they contain keratin. These spines allow cats to groom themselves by licking their fur, with the rows of papillae acting like a hairbrush.</p>
 	  </article>
 	  <footer>
-		 	<nav><ul>
+		 	<nav class="botLinks"><ul>
 				<li>images and copy from wiki commons</li>
-				<li>copyright ©2011 martha rettig</li>
+				<li>copyright &copy;2011 martha rettig</li>
 			</ul></nav>
 	  </footer>
   </body>
