yum list styles

--- a/yum/index.html
+++ b/yum/index.html
@@ -17,18 +17,30 @@
 		<h2>LEMON TILAPIA</h2>
 		<h5>Servings 4</h5>
 	</header>
-	<section class="ingredients">
-		<ul>
-			<li>4 (4 oz) tilapia fillets</li>
-			<li>2 tbsp Miami-style sazon seasoning</li>
-			<li>1/2 cup grated Parmesan cheese</li>
-			<li>1 1/2 tbsp fat-free mayonnaise</li>
-			<li>2 tbsp lemon juice</li>
-			<li>2 tsp lemon zest</li>
-			<li>1/8 tsp dried basil</li>
-			<li>1/8 tsp ground black pepper</li>
-			<li>1/8 tsp oinion powder</li>
-			<li>1/8 tsp celery salt</li>
+	<section class="total">
+		<ul class="ingredients">
+			<li>4 (4 oz)</li>
+			<li>2 tbsp</li>
+			<li>1/2 cup</li>
+			<li>1 1/2 tbsp</li>
+			<li>2 tbsp</li>
+			<li>2 tsp</li>
+			<li>1/8 tsp</li>
+			<li>1/8 tsp</li>
+			<li>1/8 tsp</li>
+			<li>1/8 tsp </li>
+		</ul>
+		<ul class="ingredientsToo">
+			<li>tilapia fillets</li>
+			<li>Miami-style sazon seasoning</li>
+			<li>grated Parmesan cheese</li>
+			<li>fat-free mayonnaise</li>
+			<li>lemon juice</li>
+			<li>lemon zest</li>
+			<li>dried basil</li>
+			<li>ground black pepper</li>
+			<li>oinion powder</li>
+			<li>celery salt</li>
 		</ul>
 	</section>
 	<section>
@@ -37,10 +49,8 @@
 			<li class="sentence">Preheat the oven's broiler and set the oven rack about 6 inches from the heat source. Line a broiler pan with aluminum foil. Spray pan with cooking spray.</li>
 			<li class="sentence">Sprinkle tilapia with sazon seasoning and arrange on the prepared broiler rack.</li>
 			<li class="sentence">Mix the Parmesan cheese, butter, fat-free mayonnaise, lemon juice, lemon zest, basil, black pepper, onion powder and celery salt together in a bowl and set aside.</li>
-		</ol>
-		<h3 class="section">Cooking</h3>
-		<ol class="instructions">
-			<li class="sentence">Cook the fillets under the preheated broiler until fish is barely opaque, or about 2 to 3 minutes per side. Spread the Parmesan cheese blend over the fish fillets, return to oven, and continue cooking until the topping is golden brown and the fish flakes easily, or about 3 to 5 more minutes<li>
+		<h3 id="section">Cooking</h3>
+			<li class="sentence">Cook the fillets under the preheated broiler until fish is barely opaque, or about 2 to 3 minutes per side. Spread the Parmesan cheese blend over the fish fillets, return to oven, and continue cooking until the topping is golden brown and the fish flakes easily, or about 3 to 5 more minutes</li>
 		</ol>
 	</section>
 	<a href="recipe.html">Recipe Card</a>
