--- a/yum/index.html
+++ b/yum/index.html
@@ -17,7 +17,7 @@
 		<h2>LEMON TILAPIA</h2>
 		<h5>Servings 4</h5>
 	</header>
-	<section class="total">
+	<section>
 		<ul class="ingredients">
 			<li>4 (4 oz)</li>
 			<li>2 tbsp</li>
