robot layout part

--- a/homework/index.html
+++ b/homework/index.html
@@ -17,9 +17,9 @@
 		<h2>Wireframes</h2>
 				<p>Add your link(s) Here</p>
 		<h2>Llama Love</h2>
-				<p><a href="http://bwhips14.github.io/llama-love/index.html">Have you loved a llamma lately?</p>
+				<p><a href="http://bwhips14.github.io/llama-love/index.html">Have you loved a llamma lately?</a></p>
 		<h2>Robots</h2>
-		    	<p>Add your link(s) Here</p>
+		    	<p><a href="http://bwhips14.github.io/robots/index.html">What Is This?</a></p>
 		<h2>Final Project</h2>
 				<p>Add your link(s) Here</p>				
 	</section>
