--- a/robots/index.html
+++ b/robots/index.html
@@ -8,17 +8,16 @@
   <link rel="stylesheet" href="style.css" type="text/css" media="screen" />
 </head>
 <body>
-<div id='site-wrapper'>
-<header id='site-header'>
-  <h1><a href='/'>Evil Genius Robot Supply</a></h1>
+<div class='header'>
+<header>
   <nav id='top-nav'>
-    <a href='#'>Login</a> | <a href='#'>Contact Us</a>
+      <a href='#'>Login</a> | <a href='#'>Contact Us</a>
   </nav>
+  <h1><a href='/'>Evil Genius Robot Supply</a></h1>
 </header>
-</div> <!-- end #site-wrapper -->
-
-<div id='menu-wrapper'>
-<nav id='main-menu'>
+</div>
+	
+<nav class='navigation'>
   <ul>
     <li>
     	<a href="#">Home</a></li>
@@ -34,10 +33,8 @@
     	<a href="#">Faqs</a></li>
   </ul>
 </nav>
-</div> <!-- end #menu-wrapper -->
 
-<div id='content-wrapper'>
-  <div id='content'>
+<section class='everything'>
     <article id='page'>
         <h1>Header 1</h1>
         <h2>Lorem Ipsum Dolor Sit Amet</h2>
@@ -93,9 +90,8 @@
       </ul>
       <a href='#'><img src='images/robot-pets.png'/></a>
       <a href='#'><img src='images/vintage-bots.png'/></a>
-      </aside> <!-- end #sidebar -->
-  </div>
-</div> <!-- end #content-wrapper -->
+      </aside>
+</section>
 
 <div id='footer-wrapper'>
   <footer id='site-footer'>
