--- a/yum/index.html
+++ b/yum/index.html
@@ -12,12 +12,12 @@
 	<div class="song">
 		<p>Listen to Rhapsody in Blue <br>by George Gershwin</p>
 	</div>
-	<header>
+	<header id="header">
 		<h1>BROILED PARMESAN</h1>
 		<h2>LEMON TILAPIA</h2>
 		<h5>Servings 4</h5>
 	</header>
-	<section>
+	<section id="ingredients">
 		<ul class="ingredients">
 			<li>4 (4 oz)</li>
 			<li>2 tbsp</li>
