--- a/robots/index.html
+++ b/robots/index.html
@@ -13,10 +13,11 @@
   <nav id='top-nav'>
       <a href='#'>Login</a> | <a href='#'>Contact Us</a>
   </nav>
-  <h1><a href='/'>Evil Genius Robot Supply</a></h1>
+  <h1><a href='/'><img src="images/logo.png" width=230px /></a></h1>
 </header>
 </div>
-	
+
+<div id="navigation">	
 <nav class='navigation'>
   <ul>
     <li>
@@ -33,6 +34,7 @@
     	<a href="#">Faqs</a></li>
   </ul>
 </nav>
+</div>
 
 <section class='everything'>
     <article id='page'>
@@ -88,8 +90,8 @@
         <li>
         	<a href="#">Lorem Ipsum</a></li>
       </ul>
-      <a href='#'><img src='images/robot-pets.png'/></a>
-      <a href='#'><img src='images/vintage-bots.png'/></a>
+      <a href='#'><img src='images/robot-pets.png' width=250px /></a>
+      <a href='#'><img src='images/vintage-bots.png' width=250px /></a>
       </aside>
 </section>
 
