--- a/cats-vs-dogs/index.html
+++ b/cats-vs-dogs/index.html
@@ -7,11 +7,15 @@
   <body>
 	  <header>
 		  <h1><img src="images/dogvscat-logo.gif" alt="dogsvcats logo"></h1>
-		  <nav class="links"><ol>
-			  <li>photos</li>
-			  <li>about</li>
-			  <li>submit</li>
-			  <li>blog</li>
+		  <nav class="links"><ol id="nav">
+			  <li id="photos">photos</li>
+			  <li> &bull;<li>
+			  <li>about<li>
+			  <li> &bull;<li>  
+			  <li>submit<li>
+			  <li> &bull;<li>
+			  <li>blog<li>
+			  <li> &bull;<li>
 			  <li>contact</li>
 		  </ol></nav>
 	  </header>
