--- a/final/index.html
+++ b/final/index.html
@@ -1,9 +1,44 @@
 <!DOCTYPE html>
 <html>
   <head>
-
+	  <title>A Brendan Whipple Design</title>
+	  <link rel="stylesheet" href="final.css" type="text/css" media="screen">
   </head>
   <body>
-
+	  <header>
+	  <div class="logo">
+		  <h1>
+			  <a href="index.html"><img src="images/myLogo1.png" width="200px" align="right" /><a>
+		  </h1>
+	  </div>
+	  <div class="title">
+		  <h2>
+			  Brendan Whipple
+		  </h2>
+		  <h3>
+			  A Design
+		  </h3>
+		  <div class="nav">
+				  <h5><a href="about.html">about myself</a></h5>
+				  <h6><a href="index.html">all work</a></h6>
+			  </ul>
+		  </div>
+	  </div>
+	  </header>
+	  <section class="images">
+		  <h4><a href="project_1.html"><img src /><a></h4>
+		  <h4><a href="project_2.html"><img src /><a></h4>
+	      <h4><a href="project_3.html"><img src /><a></h4>
+		  <h4><a href="project_4.html"><img src /><a></h4>
+		  <h4><a href="project_5.html"><img src /><a></h4>
+	      <h4><a href="project_6.html"><img src /><a></h4>
+      </section>
+	  <footer>
+		  <nav>
+			  <ul><li>brendanwhipple@gmail.com</li>
+		  		  <li>(508) 397-0463</li>
+		  		  <li><a href="linkdin"><img src="linkd-in" /></a></li>
+			  </ul>
+	  </footer>
   </body>
 </html>
