--- a/final/index.html
+++ b/final/index.html
@@ -8,7 +8,7 @@
 	  <header>
 	  <div class="logo">
 		  <h1>
-			  <a href="index.html"><img src="images/myLogo1.png" width="200px" align="right" /><a>
+			  <a href="work.html"><img src="images/myLogo1.png" width="95px" /><a>
 		  </h1>
 	  </div>
 	  <div class="title">
@@ -20,24 +20,23 @@
 		  </h3>
 		  <div class="nav">
 				  <h5><a href="about.html">about myself</a></h5>
-				  <h6><a href="index.html">all work</a></h6>
+				  <h6><a href="work.html">portfolio</a></h6>
 			  </ul>
 		  </div>
 	  </div>
-	  </header>
-	  <section class="images">
-		  <h4><a href="project_1.html"><img src /><a></h4>
-		  <h4><a href="project_2.html"><img src /><a></h4>
-	      <h4><a href="project_3.html"><img src /><a></h4>
-		  <h4><a href="project_4.html"><img src /><a></h4>
-		  <h4><a href="project_5.html"><img src /><a></h4>
-	      <h4><a href="project_6.html"><img src /><a></h4>
+	  <section class="slogan">
+		  <h4><img src="images/background.png" /></h4>
+		  <h5><img src="images/background2.png" /></h5>
       </section>
-	  <footer>
+	  </header>
+	  <footer id="footer">
+		  <p>contact</p>
 		  <nav>
 			  <ul><li>brendanwhipple@gmail.com</li>
+				  <li>|</li>
 		  		  <li>(508) 397-0463</li>
-		  		  <li><a href="linkdin"><img src="linkd-in" /></a></li>
+				  <li>|</li>
+		  		  <li><a href="http://lnkd.in/bxM_uB3"><img src="images/linked.png" width="20px" /></a></li>
 			  </ul>
 	  </footer>
   </body>
