responsive home page

--- a/final/index.html
+++ b/final/index.html
@@ -5,11 +5,14 @@
 	  <link rel="stylesheet" href="final.css" type="text/css" media="screen">
   </head>
   <body>
-	  <header>
+	  <header id="header">
 	  <div class="logo">
 		  <h1>
 			  <a href="work.html"><img src="images/myLogo1.png" width="95px" /><a>
 		  </h1>
+		  <h2>
+			  <a href="work.html"><img src="images/myLogo1.png" width="200px" /><a>
+		  <h2>
 	  </div>
 	  <div class="title">
 		  <h2>
@@ -30,14 +33,23 @@
       </section>
 	  </header>
 	  <footer id="footer">
-		  <p>contact</p>
-		  <nav>
-			  <ul><li>brendanwhipple@gmail.com</li>
-				  <li>|</li>
+		  <div class="contact">
+		  	  <p>contact</p>
+	  	  </div>
+		  <nav id="bottomnav">
+			  <ul>
+				  <li>brendanwhipple@gmail.com</li>
 		  		  <li>(508) 397-0463</li>
-				  <li>|</li>
 		  		  <li><a href="http://lnkd.in/bxM_uB3"><img src="images/linked.png" width="20px" /></a></li>
 			  </ul>
+		  </nav>
+		  <div id="smallnav">
+			  <ul>
+				  <li>brendanwhipple@gmail.com</li>
+		  		  <li>(508) 397-0463</li>
+		  		  <li><a href="http://lnkd.in/bxM_uB3"><img src="images/linked.png" width="20px" /></a></li>
+			  </ul>
+		  </div>
 	  </footer>
   </body>
 </html>
