--- a/final/index.html
+++ b/final/index.html
@@ -1,17 +1,17 @@
 <!DOCTYPE html>
 <html>
   <head>
-	  <title>A Brendan Whipple Design</title>
+	  <title>Brendan Whipple A Design</title>
 	  <link rel="stylesheet" href="final.css" type="text/css" media="screen">
   </head>
   <body>
 	  <header id="header">
 	  <div class="logo">
 		  <h1>
-			  <a href="work.html"><img src="images/myLogo1.png" width="95px" /><a>
+			  <a href="index.html"><img src="images/myLogo1.png" width="95px" /><a>
 		  </h1>
 		  <h2>
-			  <a href="work.html"><img src="images/myLogo1.png" width="200px" /><a>
+			  <a href="index.html"><img src="images/myLogo1.png" width="200px" /><a>
 		  <h2>
 	  </div>
 	  <div class="title">
