--- a/final/work.html
+++ b/final/work.html
@@ -27,43 +27,46 @@
 			  </ul>
 		  </div>
 	  </div>
+	  </header>
 	  <section class="images">
 		  <div id="images">
 		  	  <a href="mag.html"><img src="images/magcover.jpg" /></a>
 		  	  <a href="cage.html"><img src="images/cagecover.jpg" /></a>
-			  <a href="away.html"><img src="images/awaycover.jpg" /></a>
 			  <a href="heart.html"><img src="images/heartcover.jpg" /></a>
+			  <a href="away.html"><img src="images/awaycover.jpg" /></a>
 			  <a href="first.html"><img src="images/firstcover.jpg" /></a>
 			  <a href="emotion.html"><img src="images/emotioncover.jpg" /></a>
 			  <a href="pears.html"><img src="images/pearscover.jpg" /></a>
-			  <a href="ten.html"><img src="images/tencover.jpg" /></a>	  
+			  <a href="ten.html"><img src="images/tencover.jpg" /></a>	 
+			  <a href="black.html"><img src="images/blackcover.jpg" /></a>	 
 	  	  </div>
 	  </section>
 	  <section class="images2">
 		  <div id="images2">
 		  	  <a href="mag.html"><img src="images/magcover.jpg" /></a>
 		  	  <a href="cage.html"><img src="images/cagecover.jpg" /></a>
-			  <a href="away.html"><img src="images/awaycover.jpg" /></a>
 			  <a href="heart.html"><img src="images/heartcover.jpg" /></a>
+			  <a href="away.html"><img src="images/awaycover.jpg" /></a>  
 			  <a href="heart.html"><img src="images/firstcover.jpg" /></a>
 			  <a href="emotion.html"><img src="images/emotioncover.jpg" /></a>
 			  <a href="pears.html"><img src="images/pearscover.jpg" /></a>
-			  <a href="ten.html"><img src="images/tencover.jpg" /></a>	  
+			  <a href="ten.html"><img src="images/tencover.jpg" /></a>	
+			  <a href="black.html"><img src="images/blackcover.jpg" /></a>	  
 	  	  </div>
       </section>
 	  <section class="images3">
 		  <div id="images3">
 		  	  <a href="mag.html"><img src="images/magcover.jpg" /></a>
 		  	  <a href="cage.html"><img src="images/cagecover.jpg" /></a>
-			  <a href="away.html"><img src="images/awaycover.jpg" /></a>
 			  <a href="heart.html"><img src="images/heartcover.jpg" /></a>
+			  <a href="away.html"><img src="images/awaycover.jpg" /></a>
 			  <a href="heart.html"><img src="images/firstcover.jpg" /></a>
 			  <a href="emotion.html"><img src="images/emotioncover.jpg" /></a>
 			  <a href="pears.html"><img src="images/pearscover.jpg" /></a>
-			  <a href="ten.html"><img src="images/tencover.jpg" /></a>	  
+			  <a href="ten.html"><img src="images/tencover.jpg" /></a>
+			  <a href="black.html"><img src="images/blackcover.jpg" /></a>		  
 	  	  </div>
       </section>
-	  </header>
 	  <footer id="footer">
 		  <div class="contact">
 		  	  <p>contact</p>
