--- a/wireframes/index.html
+++ b/wireframes/index.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
 <html>
   <head>
-
+	  <title>Wireframes</title>
   </head>
   <body>
-
+	  <img src="images/sketch1.jpg" />
+	  <img src="images/sketch2.jpg" />
+	  <img src="images/sketch3.jpg" />
   </body>
 </html>
