--- a/homework/index.html
+++ b/homework/index.html
@@ -15,13 +15,13 @@
 		<h2>Cats vs Dogs</h2>
 				<p><a href="http://bwhips14.github.io/cats-vs-dogs/index.html">The Final Showdown</a></p>
 		<h2>Wireframes</h2>
-				<p>Add your link(s) Here</p>
+				<p><a href="http://bwhips14.github.io/wireframes/index.html">Wireframes</a></p>
 		<h2>Llama Love</h2>
 				<p><a href="http://bwhips14.github.io/llama-love/index.html">Have you loved a llamma lately?</a></p>
 		<h2>Robots</h2>
 		    	<p><a href="http://bwhips14.github.io/robots/index.html">What Is This?</a></p>
 		<h2>Final Project</h2>
-				<p>Add your link(s) Here</p>				
+				<p><a href="http://bwhips14.github.io/final/index.html">Brendan Whipple A Design</a></p>				
 	</section>
 
 </body>
