--- a/final/work.html
+++ b/final/work.html
@@ -48,7 +48,7 @@
 		  	  <a href="cage.html"><img src="images/cagecover.jpg" /></a>
 			  <a href="heart.html"><img src="images/heartcover.jpg" /></a>
 			  <a href="away.html"><img src="images/awaycover.jpg" /></a>  
-			  <a href="heart.html"><img src="images/firstcover.jpg" /></a>
+			  <a href="first.html"><img src="images/firstcover.jpg" /></a>
 			  <a href="emotion.html"><img src="images/emotioncover.jpg" /></a>
 			  <a href="pears.html"><img src="images/pearscover.jpg" /></a>
 			  <a href="ten.html"><img src="images/tencover.jpg" /></a>	
@@ -61,7 +61,7 @@
 		  	  <a href="cage.html"><img src="images/cagecover.jpg" /></a>
 			  <a href="heart.html"><img src="images/heartcover.jpg" /></a>
 			  <a href="away.html"><img src="images/awaycover.jpg" /></a>
-			  <a href="heart.html"><img src="images/firstcover.jpg" /></a>
+			  <a href="first.html"><img src="images/firstcover.jpg" /></a>
 			  <a href="emotion.html"><img src="images/emotioncover.jpg" /></a>
 			  <a href="pears.html"><img src="images/pearscover.jpg" /></a>
 			  <a href="ten.html"><img src="images/tencover.jpg" /></a>
