--- a/final/first.html
+++ b/final/first.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-	  <title>Cupcheck Magazine</title>
+	  <title>First Things First Video</title>
 	  <link rel="stylesheet" href="pages.css" type="text/css" media="screen">
   </head>
   <body>
