--- a/cats-vs-dogs/index.html
+++ b/cats-vs-dogs/index.html
@@ -6,9 +6,10 @@
   </head>
   <body>
 	  <header>
-		  <h1><img src="images/dogvscat-logo.gif" alt="dogsvcats logo"></h1>
-		  <nav class="links"><ol id="nav">
-			  <li id="photos">photos</li>
+		  <h1><p>Dogs vs Cats</p></h1>
+		  <nav class="links">
+		  <ol id="nav">
+			  <li>photos</li>
 			  <li> &bull;</li>
 			  <li>about</li>
 			  <li> &bull;</li>  
@@ -17,7 +18,8 @@
 			  <li>blog</li>
 			  <li> &bull;</li>
 			  <li>contact</li>
-		  </ol></nav>
+		  </ol>
+	  	  </nav>
 	  </header>
 	  <section>
 	  <article class="article">
@@ -32,10 +34,12 @@
 	  </article>
   	  </section>
 	  <footer>
-		 	<nav><ul>
-				<li>images and copy from wiki commons</li>
-				<li>copyright &copy;2011 martha rettig</li>
-			</ul></nav>
+		 	<nav class="foot">
+				<ul id="bottom">
+					<li>images and copy from wiki commons</li>
+					<li>copyright &copy;2011 martha rettig</li>
+				</ul>
+			</nav>
 	  </footer>
   </body>
 </html>
