--- a/final/work.html
+++ b/final/work.html
@@ -38,7 +38,7 @@
 	  </header>
 	  <section class="images">
 		  <div id="images">
-		  	  <a href="mag.html"><img src="images/magcover.jpg" alt="CUPCHECK Magazine" data-caption="CUPCHECK Magazine" /></a>
+		  	  <a href="mag.html"><img id="caption-4" class="caption" src="images/magcover.jpg" alt="CUPCHECK Magazine" data-caption="CUPCHECK Magazine" /></a>
 		  	  <a href="cage.html"><img src="images/cagecover.jpg" alt="Encage book" data-caption="Encage book" /></a>
 			  <a href="heart.html"><img src="images/heartcover.jpg" alt="Have Heart illustration" data-caption="Have Heart illustration" /></a>
 			  <a href="away.html"><img src="images/awaycover.jpg" alt="Away album art" data-caption="Away album art" /></a>
@@ -97,7 +97,7 @@
 
 	  <script>
 	  $(window).load(function() {
-	      $('img.caption').captionjs();
+	      $('img#caption-4').captionjs();
 	  });
 	  </script>
 	
