cats v dogs responsive

--- a/cats-vs-dogs/index.html
+++ b/cats-vs-dogs/index.html
@@ -21,7 +21,7 @@
 		  </ol>
 	  	  </nav>
 	  </header>
-	  <section>
+	  <section class="section">
 	  <article class="article">
 		  <h4><img src="images/tswiftdog.jpg" alt="dog looks like taylor swift"></h4>
 		  <h2>Dogs Have Better Noses</h2>
