--- a/cats-vs-dogs/index.html
+++ b/cats-vs-dogs/index.html
@@ -6,7 +6,7 @@
   </head>
   <body>
 	  <header>
-		  <h1><p>Dogs vs Cats</p></h1>
+		  <h1>Dogs vs Cats</h1>
 		  <nav class="links">
 		  <ol id="nav">
 			  <li>photos</li>
@@ -23,22 +23,22 @@
 	  </header>
 	  <section class="section">
 	  <article class="article">
-		  <h4><img src="images/tswiftdog.jpg" alt="dog looks like taylor swift"></h4>
+		  <h4><img src="images/tswiftdog.jpg" alt="dog that looks like taylor swift" /></h4>
 		  <h2>Dogs Have Better Noses</h2>
 		  <p>Dogs can discriminate odors at concentrations nearly 100 million times lower than humans can. The wet nose is essential for determining the direction of the air current containing the smell. Cold receptors in the skin are sensitive to the cooling of the skin by evaporation of the moisture by air currents.</p>
 	  </article>
 	  <article class="article">
-		  <h4><img src="images/obamacat.jpg" alt="cat looks like obama" width="320px"></h4>
+		  <h4><img src="images/obamacat.jpg" alt="cat that looks like obama" /></h4>
 		  <h2>Cats Have Better Tongues</h2>
 		  <p>Cats are known for their cleanliness, spending many hours licking their coats. The cat's tongue has backwards-facing spines about 500 micrometers long, which are called papillae. These are quite rigid, as they contain keratin. These spines allow cats to groom themselves by licking their fur, with the rows of papillae acting like a hairbrush.</p>
 	  </article>
   	  </section>
 	  <footer>
 		 	<nav class="foot">
-				<ul id="bottom">
-					<li>images and copy from wiki commons</li>
-					<li>copyright &copy;2011 martha rettig</li>
-				</ul>
+				<div id="bottom">
+					<h3>images and copy from wiki commons</h3>
+					<h3>copyright &copy;2011 martha rettig</h3>
+				</div>
 			</nav>
 	  </footer>
   </body>
