--- a/final/heart.html
+++ b/final/heart.html
@@ -58,13 +58,13 @@
 			  <h4>hand illustration</h4>
 		  </div>
 		  <div id="images">
-<a class="fancybox1" rel="group" href="images/heart/heart1.jpg"> <img src="images/heart/heart1.jpg" alt="" /></a>
+<a class="fancybox1" rel="group" href="images/heart/heart1.jpg"> <img src="images/heart/heart1.jpg" alt="Have Heart Full Illustration" /></a>
 		  </div>
       </section>
 
 	  <section class="images2">
 		  <div id="images2">
-<a class="fancybox2" rel="group" href="images/heart/heart1.jpg"> <img src="images/heart/heart1.jpg" alt="" /></a>
+<a class="fancybox2" rel="group" href="images/heart/heart1.jpg"> <img src="images/heart/heart1.jpg" alt="Have Heart Full Illustration" /></a>
 		  </div>
 		  <div id="paragraphs2">
 			  <h1>Have Heart</h1>
@@ -83,10 +83,10 @@
 		  	  <h1>Stills</h1>
 	  	  </div>
 		  <div id="photos">
-<a class="fancybox1" rel="group" href="images/heart/heart2.jpg"> <img src="images/heart/heart2.jpg" alt="" /></a>
+<a class="fancybox1" rel="group" href="images/heart/heart2.jpg"> <img src="images/heart/heart2.jpg" alt="Have Heart Illustration Detail" /></a>
 		  </div>
 		  <div id="photos3">
-<a class="fancybox2" rel="group" href="images/heart/heart2.jpg"> <img src="images/heart/heart2.jpg" alt="" /></a>
+<a class="fancybox2" rel="group" href="images/heart/heart2.jpg"> <img src="images/heart/heart2.jpg" alt="Have Heart Illustration Detail" /></a>
 		  </div>
 		  
 	  </section>
