--- a/final/cage.html
+++ b/final/cage.html
@@ -51,6 +51,13 @@
 				  <h6><a href="work.html">portfolio</a></h6>
 		  </div>
 	  </div>
+	  
+	  <div class="buttons">
+			  <a href="mag.html"><img src="images/left.png" width="35px" /></a>
+			  <a href="work.html"><img src="images/grid.png" width="35px" /></a>
+			  <a href="heart.html"><img src="images/right.png" width="35px" /></a>
+	  </div>
+	  
 	  </header>
 	  
 	  <section class="images">
@@ -126,6 +133,13 @@
 		  </div>
 		  
 	  </section>
+	  
+	  <div class="buttons2">
+			  <a href="mag.html"><img src="images/left.png" width="35px" /></a>
+			  <a href="work.html"><img src="images/grid.png" width="35px" /></a>
+			  <a href="heart.html"><img src="images/right.png" width="35px" /></a>
+	  </div>
+	  
 	  <footer id="footer">
 		  <div class="contact">
 		  	  <p>contact</p>
