--- a/final/first.html
+++ b/final/first.html
@@ -26,6 +26,13 @@
 				  <h6><a href="work.html">portfolio</a></h6>
 		  </div>
 	  </div>
+	  
+	  <div class="buttons">
+			  <a href="away.html"><img src="images/left.png" width="35px" /></a>
+			  <a href="work.html"><img src="images/grid.png" width="35px" /></a>
+			  <a href="emotion.html"><img src="images/right.png" width="35px" /></a>
+	  </div>
+	  
 	  </header>
 	  
 	  <section class="images">
@@ -61,6 +68,12 @@
 	  <section class="stills">
 
 	  </section>
+	  
+	  <div class="buttons2">
+			  <a href="away.html"><img src="images/left.png" width="35px" /></a>
+			  <a href="work.html"><img src="images/grid.png" width="35px" /></a>
+			  <a href="emotion.html"><img src="images/right.png" width="35px" /></a>
+	  </div>
 		  
 	  </section>
 	  <footer id="footer">
