--- a/final/heart.html
+++ b/final/heart.html
@@ -45,6 +45,13 @@
 				  <h6><a href="work.html">portfolio</a></h6>
 		  </div>
 	  </div>
+	  
+	  <div class="buttons">
+			  <a href="cage.html"><img src="images/left.png" width="35px" /></a>
+			  <a href="work.html"><img src="images/grid.png" width="35px" /></a>
+			  <a href="away.html"><img src="images/right.png" width="35px" /></a>
+	  </div>
+	  
 	  </header>
 	  
 	  <section class="images">
@@ -90,6 +97,13 @@
 		  </div>
 		  
 	  </section>
+	  
+	  <div class="buttons2">
+			  <a href="cage.html"><img src="images/left.png" width="35px" /></a>
+			  <a href="work.html"><img src="images/grid.png" width="35px" /></a>
+			  <a href="away.html"><img src="images/right.png" width="35px" /></a>
+	  </div>
+	  
 	  <footer id="footer">
 		  <div class="contact">
 		  	  <p>contact</p>
