--- a/final/ten.html
+++ b/final/ten.html
@@ -45,6 +45,13 @@
 				  <h6><a href="work.html">portfolio</a></h6>
 		  </div>
 	  </div>
+	  
+	  <div class="buttons">
+			  <a href="pears.html"><img src="images/left.png" width="35px" /></a>
+			  <a href="work.html"><img src="images/grid.png" width="35px" /></a>
+			  <a href="black.html"><img src="images/right.png" width="35px" /></a>
+	  </div>
+	  
 	  </header>
 	  
 	  <section class="images">
@@ -120,6 +127,13 @@
 		  </div>	  
 		  
 	  </section>
+	  
+	  <div class="buttons2">
+			  <a href="pears.html"><img src="images/left.png" width="35px" /></a>
+			  <a href="work.html"><img src="images/grid.png" width="35px" /></a>
+			  <a href="black.html"><img src="images/right.png" width="35px" /></a>
+	  </div>
+	  
 	  <footer id="footer">
 		  <div class="contact">
 		  	  <p>contact</p>
