--- a/final/emotion.html
+++ b/final/emotion.html
@@ -55,7 +55,7 @@
 	  <div class="buttons">
 			  <a href="first.html"><img src="images/left.png" width="35px" /></a>
 			  <a href="work.html"><img src="images/grid.png" width="35px" /></a>
-			  <a href="pears.html"><img src="images/right.png" width="35px" /></a>
+			  <a href="keats.html"><img src="images/right.png" width="35px" /></a>
 	  </div>
 	  
 	  </header>
@@ -163,7 +163,7 @@
 	  <div class="buttons2">
 			  <a href="first.html"><img src="images/left.png" width="35px" /></a>
 			  <a href="work.html"><img src="images/grid.png" width="35px" /></a>
-			  <a href="pears.html"><img src="images/right.png" width="35px" /></a>
+			  <a href="keats.html"><img src="images/right.png" width="35px" /></a>
 	  </div>
 	  
 	  <footer id="footer">
