--- a/final/ten.html
+++ b/final/ten.html
@@ -47,7 +47,7 @@
 	  </div>
 	  
 	  <div class="buttons">
-			  <a href="pears.html"><img src="images/left.png" width="35px" /></a>
+			  <a href="keats.html"><img src="images/left.png" width="35px" /></a>
 			  <a href="work.html"><img src="images/grid.png" width="35px" /></a>
 			  <a href="black.html"><img src="images/right.png" width="35px" /></a>
 	  </div>
@@ -129,7 +129,7 @@
 	  </section>
 	  
 	  <div class="buttons2">
-			  <a href="pears.html"><img src="images/left.png" width="35px" /></a>
+			  <a href="keats.html"><img src="images/left.png" width="35px" /></a>
 			  <a href="work.html"><img src="images/grid.png" width="35px" /></a>
 			  <a href="black.html"><img src="images/right.png" width="35px" /></a>
 	  </div>
